--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,9 +10,19 @@
     font-optical-sizing: auto;
     font-style: normal;
 }
+
 .font-outfit {
     font-family: "Outfit", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
+}
+
+.line-clamp-2 {
+    display: -webkit-box;
+    line-clamp: 2;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
   
