--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -24,5 +24,24 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
-  }
-  
+}
+
+@keyframes shrinkWidth {
+    from {
+        width: 100%;
+    }
+
+    to {
+        width: 0;
+    }
+}
+
+.alert-timer {
+    position: absolute;
+    background: rgb(236, 236, 236);
+    z-index: -10;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    animation: shrinkWidth 3.5s linear;
+}
